# note-taking-app-rs

./: .gitignore  Cargo.toml  rustfmt.toml
_archive/db_sqlite/src/: main.rs  todos.db
db/: Cargo.toml
db/src/: lib.rs  main.rs
src/: main.rs
ui/: Cargo.toml
ui_cosmic/: Cargo.toml
ui_cosmic/src/: main.rs
ui_iced/: Cargo.toml
ui_iced/src/: main.rs
