[package]
name = "db"
version = "0.1.0"
edition = "2021"
authors = ["Yunier Alvarez <yunieralvarez@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
once_cell = "1.18.0"
serde = { version = "1.0.192", features = ["derive"] }
surrealdb = { version = "1.0.0", features = ["kv-speedb"] }
# tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio = { version = "1.34.0", features = ["full"] }
