[package]
name = "ui_cosmic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "wayland",
    "tokio",
] }
