[package]
name = "ui_iced"
version = "0.1.0"
edition = "2021"
authors = ["Yunier Alvarez <yunieralvarez@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["debug"] }
tokio = { version = "1.34.0", features = ["full"] }
